k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: car-service
spec:
  selector:
    app: car-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
